name:                veb-tree
version:             0.1.0
synopsis:            Van Emde Boas tree implementation
homepage:            github.com/volhovm/veb-tree
license:             GPL-3
license-file:        LICENSE
author:              Mikhail Volkhov
maintainer:          volhovm.cs@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.VEB
                     , Data.VEB.Internal
  build-depends:       base >=4.9 && <4.11
                     , array >= 0.5.2.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

test-suite veb-test
  main-is:             Main.hs
  hs-source-dirs:      test
  build-depends:       base >=4.9 && <4.11
                     , hspec
                     , QuickCheck
                     , veb-tree
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -fno-warn-orphans

benchmark veb-bench
  main-is:             Main.hs
  hs-source-dirs:      bench
  build-depends:       base >=4.9 && <4.11
                     , veb-tree
                     , random
                     , gauge >= 0.2.1
                     , deepseq
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -fno-warn-orphans